create_signup_page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,14 @@
 @import "config/reset";
-@import "config/boxsizing";
-@import "config/variables";
-@import "mixins/tops_mixins";
-@import "modules/tops";
-@import "font-awesome-sprockets";
-@import "./font-awesome";
+@import "modules/single-footer"
+@import "modules/signup"
+
+// @import "config/boxsizing";
+// @import "config/variables";
+
+// @import "font-awesome-sprockets";
+// @import "./font-awesome";
+
+// @import "mixins/tops_mixins";
+// @import "modules/tops";
+// @import "mixins/mypage";
+// @import "modules/header_navbar";
